--- a/assets/style.css
+++ b/assets/style.css
@@ -96,8 +96,9 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-size: cover;
-    max-width: 1400px;
-    width: 1400px;
+    width: 100%;
+    height: 100%;
+    /* max-width: 1400px; */
     /* background-color: #AAD7D9; */
 }
 
