--- a/assets/style.css
+++ b/assets/style.css
@@ -98,7 +98,7 @@ body {
     background-size: cover;
     width: 100%;
     height: 100%;
-    max-width: 1400px;
+    /* max-width: 1400px; */
     /* background-color: #AAD7D9; */
 }
 
