--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -1,5 +1,3 @@
-/* TABLET */
-
 @media (max-width: 1200px) {
     .navbar {
         width: 100%;
@@ -11,66 +9,262 @@
         gap: 20px;
         width: 50%;
     }
-    /* BODY */
-
-    body {
-        width: 100%;
-    }
+  
     /* HERO */
 
     #hero {
         width: 100%;
-        padding-right: 160px;
+        max-width: 1200px;
+    }
+
+    .hero-card {
+        width: 80%;
+        height: 80%;
     }
 
     /* DISCOVER */
 
     #discover {
-        width: 80%;
+        width: 100%;
         max-width: 1200px;
-        padding-right: 85px;
         align-items: center;
         justify-content: center;
     }
 
     .continent {
-        gap: 20px;
+        gap: 10px;
         align-items: center;
         justify-content: center;
-        /* flex-direction: unset; */
+        width: 80%;
     }
     /* PROMOTION */
 
     #promotion {
         width: 100%;
+        max-width: 1200px;
         align-items: center;
         justify-content: center;
     }
 
     .country {
-        gap: 20px;
+        gap: 10px;
         align-items: center;
         justify-content: center;
-        padding-right: 80px;
+        width: 80%;
     }
+
+    .container {
+        width: 100%;
+    }
+
     /* ABOUT */
 
     .information {
+        width: 80%;
         justify-content: center;
         align-items: center;
-        padding-right: 80px;
         gap: 80px;
     }
 
     .regret {
-        padding-right: 80px;
+        width: 80%;
         gap: 80px;
     }
     /* FOOTER */
 
     .contact-info {
+        width: 100%;
         justify-content: center;
         align-items: center;
-        padding-right: 80px;
+    }
+}
+
+/* TABLET */
+
+@media (max-width: 992px) {
+
+    header {
+        width: 100%;
+    }
+
+    .navbar {
+        gap: 8px;
+        width: 80%;
+        justify-content: end;
+    }
+
+    .navbar-list {
+        position: absolute;
+        top: 70px;
+        left: 5%;
+        right: 5%;
+        width: 90%;
+        flex-direction: column;
+        background-color: var(--about-bg);
+        border: 2px solid var(--hero-bg);
+        border-top: 0px;
+        border-radius: 0 0 15px 15px;
+        align-items: flex-start;
+        padding: 45px 30px;
+        gap: 25px;
+        z-index: 2;
+        display: none;
+    }
+
+    .navbar-list a {
+        font-size: 18px;
+    }
+
+    .navbar i {
+        display: flex;
+        order: 2;
+        cursor: pointer;
+        font-size: 42px;
+        
+    }
+
+    #toggle-menu:checked + .navbar-list {
+        display: flex;
+    }
+
+    /* HERO */
+
+    .hero-card {
+        width: 90%;
+        max-width: 992px;
+    }
+
+    .hero-card-title h1 {
+        width: 90%;
+        max-width: 500px;
+    }
+
+    .hero-card-search {
+        padding-right: 50px;
+    }
+
+    .hero-card-search button {
+        width: 190px;
+        height: 40px;
+    }
+
+    /* DISCOVER */
+
+    #discover {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .continent {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 40px;
+    }
+
+    /* PROMOTION */
+
+    .country {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    /* ABOUT */
+
+    .information {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .regret {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .text-regret {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        width: 65%;
+    }
+
+        /* FOOTER */
+
+    .footer-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contact-info {
+        flex-wrap: wrap;
+        gap: 10px;
+        width: 100%;
+        padding: 30px 0;
+        /* height: 100%; */
+    }
+
+   .contact-card {
+    height: 150px;
+   }
+}
+
+@media (max-width: 576px) {
+
+    .hero-card {
+        width: 80%;
+        background-color: #7FC7D9;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='459' height='382.5' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.19'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/svg%3E");
+        border: 2px solid #365486;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
+
+    .hero-card-title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .hero-card-title h1 {
+        font-size: 30px;
+    }
+
+    .hero-card-search {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .regret {
+        width: 50%;
+        justify-content: space-between;
+    }
+
+    .img-left {
+        right: 60px;
+        padding: 30px 80px 30px 0 ;
+    }
+
+    .contact-info {
+        height: 100%;
+        margin: 40px;
+    }
+
+    .contact-card {
+        gap: 5px;
     }
 }
