--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -1,7 +1,18 @@
 @media (max-width: 1200px) {
+    body {
+        max-width: 1200px;
+    }
+   
+    header {
+        max-width: 1200px;
+    }
+    
     .navbar {
+        max-width: 1200px;
         width: 100%;
+        display: flex;
         justify-content: center;
+        align-items: center;
         /* gap: 10px; */
     }
 
@@ -12,9 +23,13 @@
   
     /* HERO */
 
+
     #hero {
         width: 100%;
         max-width: 1200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .hero-card {
@@ -27,6 +42,7 @@
     #discover {
         width: 100%;
         max-width: 1200px;
+        display: flex;
         align-items: center;
         justify-content: center;
     }
@@ -42,6 +58,7 @@
     #promotion {
         width: 100%;
         max-width: 1200px;
+        display: flex;
         align-items: center;
         justify-content: center;
     }
@@ -59,6 +76,13 @@
 
     /* ABOUT */
 
+    #about {
+        max-width: 1200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .information {
         width: 80%;
         justify-content: center;
@@ -72,7 +96,16 @@
     }
     /* FOOTER */
 
+    footer {
+        max-width: 1200px;
+    }
+
+    #contact {
+        max-width: 1200px;
+    }
+
     .contact-info {
+        max-width: 1200px;
         width: 100%;
         justify-content: center;
         align-items: center;
@@ -83,7 +116,13 @@
 
 @media (max-width: 992px) {
 
+    body {
+        max-width: 992px;
+        width: 100%;
+    }
+
     header {
+        max-width: 992px;
         width: 100%;
     }
 
@@ -129,6 +168,11 @@
 
     /* HERO */
 
+    #hero {
+        max-width: 992px;
+        width: 100%;
+    }
+
     .hero-card {
         width: 90%;
         max-width: 992px;
@@ -151,6 +195,8 @@
     /* DISCOVER */
 
     #discover {
+        max-width: 992px;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -166,6 +212,11 @@
 
     /* PROMOTION */
 
+    #promotion {
+        max-width: 992px;
+        width: 100%;
+    }
+
     .country {
         display: flex;
         flex-wrap: wrap;
@@ -173,6 +224,11 @@
     }
 
     /* ABOUT */
+
+    #about {
+        max-width: 992px;
+        width: 100%;
+    }
 
     .information {
         display: flex;
@@ -220,8 +276,29 @@
 
 @media (max-width: 576px) {
 
+    body {
+        max-width: 576px;
+        width: 100%;
+    }
+
+    header {
+        max-width: 576px;
+        width: 100%;
+    }
+
+    .navbar {
+        max-width: 576px;
+        width: 100%;
+    }
+
+    #hero {
+        max-width: 576px;
+        width: 100%;
+    }
+
     .hero-card {
-        width: 80%;
+        width: 100%;
+        height: 100%;
         background-color: #7FC7D9;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='459' height='382.5' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.19'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/svg%3E");
         border: 2px solid #365486;
@@ -249,10 +326,43 @@
         flex-direction: column;
     }
 
-    .regret {
-        width: 50%;
-        justify-content: space-between;
+    #discover {
+        max-width: 576px;
+        width: 100%;
     }
+
+    #promotion {
+        max-width: 576px;
+        width: 100%;
+    }
+
+    #about {
+        max-width: 576px;
+        width: 100%;
+    }
+
+    .regret {
+        width: 80%;
+        height: 80%;
+        justify-content: column;
+    }
+
+    .text-regret {
+        width: 50%;
+        height: 50%;
+        text-align: center;
+    }
+
+    footer {
+        max-width: 576px;
+        width: 100%;
+    }
+
+    .contact-info {
+        max-width: 576px;
+        width: 100%;
+    }
+
 
     .img-left {
         right: 60px;
