--- a/assets/style.css
+++ b/assets/style.css
@@ -96,6 +96,7 @@ header {
 /* Main */
 
 body {
+    max-width: 1400px;
     background-color: #7FC7D9;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%2368b0ca' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%235599bb' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%234682ab' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%233c6b99' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%23365486' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
