--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -1,7 +1,4 @@
 @media (max-width: 1200px) {
-    body {
-        max-width: 1200px;
-    }
    
     header {
         max-width: 1200px;
@@ -100,6 +97,11 @@
         max-width: 1200px;
     }
 
+    .footer-img {
+        max-width: 1200px;
+        width: 100%;
+    }
+
     #contact {
         max-width: 1200px;
     }
@@ -116,10 +118,6 @@
 
 @media (max-width: 992px) {
 
-    body {
-        max-width: 992px;
-        width: 100%;
-    }
 
     header {
         max-width: 992px;
@@ -129,7 +127,7 @@
     .navbar {
         gap: 8px;
         width: 80%;
-        justify-content: end;
+        justify-content: flex-end;
     }
 
     .navbar-list {
@@ -276,10 +274,6 @@
 
 @media (max-width: 576px) {
 
-    body {
-        max-width: 576px;
-        width: 100%;
-    }
 
     header {
         max-width: 576px;
@@ -287,6 +281,11 @@
     }
 
     .navbar {
+        max-width: 576px;
+        width: 100%;
+    }
+
+    .navbar-list {
         max-width: 576px;
         width: 100%;
     }
@@ -331,6 +330,11 @@
         width: 100%;
     }
 
+    .discover-text h3 {
+        width: 100%;
+        text-align: center;
+    }
+
     #promotion {
         max-width: 576px;
         width: 100%;
@@ -341,16 +345,22 @@
         width: 100%;
     }
 
+    .information {
+        max-width: 576px;
+        width: 100%;
+    }
+
     .regret {
-        width: 80%;
-        height: 80%;
+        width: 100%;
         justify-content: column;
+        gap: 20px;
     }
 
     .text-regret {
-        width: 50%;
+        width: 60%;
         height: 50%;
         text-align: center;
+        gap: 20px;
     }
 
     footer {
@@ -358,18 +368,28 @@
         width: 100%;
     }
 
-    .contact-info {
+    #contact {
         max-width: 576px;
         width: 100%;
     }
 
+    .footer-img {
+        max-width: 576px;
+        width: 100%;
+    }
+
+    .img-right {
+        max-width: 576px;
+        width: 100%;
+    }
 
     .img-left {
-        right: 60px;
-        padding: 30px 80px 30px 0 ;
+        width: 100%;
     }
 
     .contact-info {
+        max-width: 576px;
+        width: 100%;
         height: 100%;
         margin: 40px;
     }
