--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -75,7 +75,7 @@
     /* ABOUT */
 
     #about {
-        max-width: 1200px;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -91,16 +91,20 @@
     .regret {
         width: 80%;
         gap: 80px;
+        flex-direction: column;
+    }
+
+    .text-regret {
+        width: 60%;
     }
     /* FOOTER */
 
-    footer {
-        max-width: 1200px;
+    .footer-img {
+        width: 100%;
     }
 
-    .footer-img {
-        max-width: 1200px;
-        width: 100%;
+    .img-right {
+        width: 30%;
     }
 
     #contact {
@@ -214,7 +218,6 @@
     #promotion {
         max-width: 992px;
         width: 100%;
-        border: 1px solid red;
     }
 
     .country {
@@ -255,10 +258,24 @@
 
         /* FOOTER */
 
+    #contact {
+        width: 100%;
+    }    
+
     .footer-img {
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .img-right {
+        width: 50%;
+    }
+
+    .img-left img {
+        width: 100px;
+        height: 100px;
     }
 
     .contact-info {
@@ -266,7 +283,6 @@
         gap: 10px;
         width: 100%;
         padding: 30px 0;
-        /* height: 100%; */
     }
 
    .contact-card {
@@ -278,27 +294,20 @@
 
 
     header {
-        position: relative;
-        max-width: 576px;
         width: 100%;
-        border: 1px solid red;
     }
 
     .navbar {
-        max-width: 576px;
         width: 100%;
     }
 
     .navbar-list {
-        max-width: 576px;
         width: 100%;
     }
 
     #hero {
-        max-width: 576px;
         width: 100%;
         height: 100%;
-        border: 1px solid red;
     }
 
     .hero-card {
@@ -332,9 +341,7 @@
     }
 
     #discover {
-        max-width: 576px;
         width: 100%;
-        border: 1px solid red;
     }
 
     .discover-text h3 {
@@ -343,27 +350,21 @@
     }
 
     #promotion {
-        max-width: 576px;
         width: 100%;
     }
 
     #about {
-        max-width: 576px;
         width: 100%;
-        border: 1px solid red;
     }
 
     .information {
-        max-width: 576px;
         width: 100%;
-        border: 1px solir red;
     }
 
     .regret {
         width: 100%;
         justify-content: column;
         gap: 20px;
-        border: 1px soid red;
     }
 
     .text-regret {
@@ -371,30 +372,23 @@
         height: 50%;
         text-align: center;
         gap: 20px;
-        border: 1px solid red;
     }
 
     footer {
-        max-width: 576px;
         width: 100%;
     }
 
     #contact {
-        max-width: 576px;
         width: 100%;
     }
 
     .footer-img {
-        max-width: 576px;
         width: 100%;
         justify-content: flex-start;
-        border: 1px solid red;
     }
 
     .img-right {
-        max-width: 576px;
         width: 100%;
-        border: 1px solid red;
     }
 
     .img-left {
@@ -407,11 +401,10 @@
     }
 
     .contact-info {
-        max-width: 576px;
+        /* max-width: 576px; */
         width: 100%;
         height: 100%;
         margin: 40px;
-        border: 1px solid red;
     }
 
     .contact-card {
