--- a/assets/style.css
+++ b/assets/style.css
@@ -40,9 +40,10 @@ header {
     align-items: center;
     height: 70px;
     padding: 0px 35px;
-    box-shadow: 0 8px 24px rgba(0,0,0,0.2);
     position: fixed;
-    /* background-color: var(--header-bg); */
+    box-shadow: 0px 7px 6px 1px rgba(0,0,0,0.58);
+    -webkit-box-shadow: 0px 7px 6px 1px rgba(0,0,0,0.58);
+    -moz-box-shadow: 0px 7px 6px 1px rgba(0,0,0,0.58);
 }
 
 .logo {
@@ -140,6 +141,9 @@ main {
     justify-content: space-between;
     align-items: center;
     border-radius: 16px;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
 }
 
 .hero-card-title {
@@ -245,6 +249,9 @@ main {
     text-align: center;
     gap: 10px;
     background-position: center center;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
 }
 
 .continent-card p {
@@ -307,6 +314,9 @@ main {
     cursor: pointer;
     background-position: center center;
     border: 1px solid var(--about-bg);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
 }
 
 .country-card.japon {
@@ -426,6 +436,9 @@ main {
     padding: 20px;
     border-radius: 20px;
     cursor: pointer;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
 }
 
 .info img {
@@ -530,6 +543,7 @@ footer {
     align-items: center;
     width: 100%;
     height: 100%;
+    padding: 20px 0px 20px 0px;
     gap: 30px;
 }
 
@@ -544,6 +558,9 @@ footer {
     border: 2px solid var(--about-bg);
     border-radius: 25px;
     gap: 5px;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.53);
 }
 
 .contact-card h3 {
