--- a/assets/animaciones.css
+++ b/assets/animaciones.css
@@ -25,7 +25,7 @@
   content: "";
   height: 2px;
   width: 100%;
-  background-color: rgb(27, 22, 22);
+  background-color: rgb(1, 52, 83);
   /* background: rgb(125,124,124);
     background: radial-gradient(circle, rgba(125,124,124,1) 0%, rgba(25,23,23,1) 70%); */
   position: absolute;
@@ -147,4 +147,14 @@
 
 .img-left img:hover {
   animation: rotate-scale-up 0.8s linear both;
+}
+
+.btn {
+  transition: all 0.2s ease-out;
+}
+
+.btn:hover {
+  background-color: var(--button-bg);
+  color: var(--text-white);
+  transition: all 0.2s ease-in;
 }
