--- a/assets/style.css
+++ b/assets/style.css
@@ -100,10 +100,7 @@ header {
 /* Main */
 
 body {
-  max-width: 1400px;
-  /* background: radial-gradient(circle at top left,transparent 9%, #7FC7D9 10% ,#7FC7D9 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #7FC7D9 10% ,#7FC7D9 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #7FC7D9 10% ,#7FC7D9 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #7FC7D9 10% ,#7FC7D9 15% , transparent 16%),radial-gradient(circle, transparent 25%, #d4fcf6  26%),linear-gradient(45deg, transparent 46%, #7FC7D9 47%, #7FC7D9 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #7FC7D9 47%, #7FC7D9 52%, transparent 53%);
-    background-size: 3em 3em;
-    background-color: #d4fcf6; */
+  /* max-width: 1400px; */
   background: linear-gradient(90deg, rgb(152, 229, 248), rgb(14, 38, 79));
   width: 100%;
   height: 100%;
@@ -125,7 +122,7 @@ main {
   padding-top: 30px;
   width: 100%;
   height: 350px;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -200,7 +197,7 @@ main {
   padding-top: 80px;
   padding-bottom: 80px;
   width: 100%;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -212,7 +209,6 @@ main {
   align-items: center;
   flex-direction: column;
   width: 100%;
-  /* padding: 20px; */
 }
 
 .discover-text {
@@ -288,7 +284,7 @@ main {
 
 #promotion {
   width: 100%;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -299,7 +295,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* flex-direction: row; */
   gap: 50px;
   width: 100%;
 }
@@ -350,7 +345,6 @@ main {
 .info-top h3 {
   font-size: 20px;
   font-weight: 800;
-  /* background: linear-gradient(90deg, rgba(16,0,255,1) 0%, rgba(0,0,0,1) 50%, rgba(255,0,9,1) 100%); */
   background-color: #0f1035;
   background-clip: unset;
   -webkit-text-fill-color: transparent;
@@ -405,7 +399,7 @@ main {
 #about {
   padding-top: 40px;
   width: 100%;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   padding-top: 150px;
   display: flex;
   justify-content: center;
@@ -451,7 +445,7 @@ main {
 }
 
 .regret {
-  max-width: 1400px;
+  /* max-width: 1400px; */
   width: 100%;
   padding: 100px 0;
   display: flex;
@@ -492,13 +486,15 @@ footer {
 }
 
 #contact {
-  max-width: 1400px;
+  /* max-width: 1400px; */
   width: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* CAMBIOS */
 .footer-img {
-  max-width: 1400px;
+  /* max-width: 1400px; */
   width: 100%;
   display: flex;
   justify-content: space-between;
